<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.ThemeDialogFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:textSize="18sp"
        android:text="@string/choose_theme" />

    <RadioGroup
        android:id="@+id/rg_theme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/rd_light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/light"/>

        <RadioButton
            android:id="@+id/rd_dark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dark"/>

    </RadioGroup>

    <Button
        android:id="@+id/btn_choose_theme"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="?attr/text"
        android:text="@string/choose">

    </Button>

</LinearLayout>