<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="4dp"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_item_favorite"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp"
        app:cardMaxElevation="4dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/item_img"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="6dp"
                tools:src="@tools:sample/avatars" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:id="@+id/tv_item_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:gravity="start"
                    android:text="@string/item_name"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_item_url"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/item_url"
                    android:textSize="12sp" />

            </LinearLayout>

        </LinearLayout>

        <ImageButton
            android:id="@+id/clear_btn"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginEnd="8dp"
            android:src="?attr/button_clear"
            android:background="@null"
            android:scaleType="fitXY"
            android:layout_gravity="center_vertical|end"
            android:contentDescription="@string/clear" />

    </androidx.cardview.widget.CardView>

</LinearLayout>